# baliza

./: .env  .gitignore  .pre-commit-config.yaml  .repomixignore  AGENTS.md  CLAUDE.md  CLEANUP_SUMMARY.md  DATA_INTERFACE.md  ENDPOINT_INTEGRATION_PLAN.md  ISSUES.md  LICENSE  LICENSE-MIT  MAJOR_REFACTOR_ANALYSIS.md  MAJOR_REFACTOR_IMPLEMENTATION.md  MANIFESTO.md  PROBLEMAS_PAGINAS.MD  README.md  SELECTIVE_MERGE_SUMMARY.md  SUMMARY.md  TESTING.md  TODO.md  baliza_data.duckdb  create_dummy_data.py  discover_modalidades.py  endpoint_test_results.json  get_yesterday_date.py  mkdocs.yml  monthly_report.md  profiles.yml  pyproject.toml  pytest.ini  repomix-output.xml  run_tests.py  settings_legacy.py  simplification.md  simulate_extraction.py  tabela-tasks.md  test_contratacoes_proposta.py  test_date_formats.py  test_endpoints.py  (+6 more)
sandbox/baliza-analytics/: README.md  pyproject.toml
sandbox/baliza-analytics/reports/: fraud_analysis.py
sandbox/baliza-analytics/src/baliza_analytics/: __init__.py  data_connector.py  fraud_detection.py  main.py
src/baliza/: .gitignore  README.md  __init__.py  __main__.py  archival.py  backend.py  cli.py  client.py  config.py  content_utils.py  db_utils.py  dbt_runner.py  dependencies.py  endpoint_explorer.py  enhanced_endpoint_test.py  enums.py  extraction_coordinator.py  extractor.py  extractor_legacy.py  fetcher.py  ia_federation.py  loader.py  logger.py  main.py  mcp.py  mcp_server.py  models.py  pipeline.py  plan_fingerprint.py  pncp_client.py  pncp_extractor.py  pncp_extractor_v1_backup.py  pncp_parser.py  pncp_schemas.py  pncp_task_planner.py  pncp_writer.py  pyproject.toml  schemas.py  seeds_pipeline.py  settings.py  (+10 more)
src/baliza/api_pncp_consulta_client/: __init__.py
src/baliza/api_pncp_consulta_client/models/: __init__.py  ata_registro_preco_periodo_dto.py  categoria.py  consultar_instrumento_cobranca_dto.py  contratacao_fonte_orcamentaria_dto.py  evento_nota_fiscal_consulta_dto.py  item_nota_fiscal_consulta_dto.py  nota_fiscal_eletronica_consulta_dto.py  pagina_retorno_ata_registro_preco_periodo_dto.py  pagina_retorno_consultar_instrumento_cobranca_dto.py  pagina_retorno_plano_contratacao_com_itens_do_usuario_dto.py  pagina_retorno_recuperar_compra_publicacao_dto.py  pagina_retorno_recuperar_contrato_dto.py  plano_contratacao_com_itens_do_usuario_dto.py  plano_contratacao_item_dto.py  recuperar_amparo_legal_dto.py  recuperar_compra_dto.py  recuperar_compra_dto_indicador_orcamento_sigiloso.py  recuperar_compra_dto_situacao_compra_id.py  recuperar_compra_publicacao_dto.py  recuperar_compra_publicacao_dto_situacao_compra_id.py  recuperar_contrato_dto.py  recuperar_contrato_dto_tipo_pessoa.py  recuperar_contrato_dto_tipo_pessoa_sub_contratada.py  recuperar_orgao_entidade_dto.py  recuperar_unidade_orgao_dto.py  resposta_erro_validacao_dto.py  tipo_contrato.py  tipo_instrumento_cobranca_dto.py
src/baliza/enums/: __init__.py  contratacao.py  contrato.py  geral.py
src/baliza/extraction/: __init__.py  config.py  gap_detector.py  pipeline.py
src/baliza/flows/: __init__.py  complete_extraction.py  export.py  marts.py  raw.py  staging.py
src/baliza/legacy/: enums.py  extractor_legacy.py  plan_fingerprint.py  task_claimer.py  utils.py  validators.py
src/baliza/legacy/models/: __init__.py
src/baliza/legacy/sql/: cleanup_old_data.sql  init_schema.sql
src/baliza/legacy/utils/: __init__.py  circuit_breaker.py  endpoints.py  hash_utils.py  http_client.py  (+1 more)
src/baliza/metrics/: __init__.py  data_quality.py
src/baliza/pipelines/: gap_detector.py  pncp.py  pncp_config.py
src/baliza/sql/: cleanup_old_data.sql  get_table_stats.sql  init_db.sql  init_schema.sql  insert_api_request.sql  log_execution.sql  marts_data_quality.sql  marts_extraction_summary.sql  staging_atas.sql  staging_contratacoes.sql  staging_contratos.sql
src/baliza/ui/: __init__.py  components.py  dashboard.py  errors.py  explorer.py  theme.py
src/baliza/utils/: __init__.py  circuit_breaker.py  cli_helpers.py  completion_tracking.py  endpoints.py  http_client.py  json_utils.py
(+448 files in other folders)
