[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baliza"
version = "0.1.0"
description = "A modern, production-ready data pipeline for PNCP data using Prefect, Ibis, and DuckDB."
authors = [{ name = "Gemini", email = "gemini@google.com" }]

dependencies = [
    "prefect",
    "ibis-framework[duckdb]",
    "pydantic",
    "httpx",
    "typer[all]",
    "rich",
    "pyarrow",
    "fastparquet",
    "pyyaml"
]

[project.scripts]
baliza = "baliza.cli:app"
