[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "baliza"
version = "0.1.0"
description = "A modern, production-ready data pipeline for PNCP data using Prefect, Ibis, and DuckDB."
authors = [{ name = "Gemini", email = "gemini@google.com" }]

dependencies = [
    "prefect",
    "ibis-framework[duckdb]",
    "pydantic",
    "httpx",
    "typer",
    "rich",
    "ruff>=0.12.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0"
]

[project.scripts]
baliza = "baliza.cli:app"
